[package]
name = "nonnull-mut"
version = "0.1.1"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["no_std", "nonnull", "invariant", "mut", "pointer"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]
description = "NonNull<T>, but T is invariant like *mut T"

license = "MIT"
repository = "https://github.com/A4-Tacks/nonnull-mut-rs"
readme = "README.md"

[dependencies]
